opdrachten_2 exercises finished

--- a/jquery-opdrachten-2/Opdracht_7/index.html
+++ b/jquery-opdrachten-2/Opdracht_7/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<link href="style.css" rel="stylesheet" type="text/css" />
+		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 		<title>jQuery : Exercise 7</title>
 	</head>
 	<body>
@@ -10,8 +13,8 @@
 		<div id="content">
 			<img src="images/jquery-logo.png" />
 			<h2>What is jQuery?</h2>
-			<p>jQuery is a library <span class="red">JavaScript</span> free and cross-platform platform created to facilitate the writing of <a href="https://fr.wikipedia.org/wiki/Client_Side_Scripting">client-side scripts</a> in the code <span class="green">HTML</span> web pages.</p>
-			<p>The first version was launched in January 2006 by <a href="https://fr.wikipedia.org/wiki/John_Resig">John Resig</a>.</p>
+			<p>jQuery is a library <span class="red">JavaScript</span> free and cross-platform platform created to facilitate the writing of <a href="https://fr.wikipedia.org/wiki/Client_Side_Scripting" data-toggle="tooltip" date-placement="bottom" title="https://fr.wikipedia.org/wiki/Client_Side_Scripting">client-side scripts</a> in the code <span class="green">HTML</span> web pages.</p>
+			<p>The first version was launched in January 2006 by <a href="https://fr.wikipedia.org/wiki/John_Resig" data-toggle="tooltip" date-placement="bottom" title="https://fr.wikipedia.org/wiki/John_Resig">John Resig</a>.</p>
 			
 			<h2>What can I do with jQuery?</h2>
 			<p>The library contains the following features in particular:</p>
@@ -22,7 +25,7 @@
 				<li>Manipulations of cascading style sheets (adding/deleting classes, attributes...) ;</li>
 				<li><span class="green">AJAX</span> ;</li>
 				<li>Plugins ;</li>
-				<li>Utilities ( <a href="https://fr.wikipedia.org/wiki/Navigateur_web">web browser</a>,...).</li>
+				<li>Utilities ( <a href="https://fr.wikipedia.org/wiki/Navigateur_web" data-toggle="tooltip" date-placement="bottom" title="https://fr.wikipedia.org/wiki/Navigateur_web">web browser</a>,...).</li>
 			</ul>	
 		</div>
 		
