--- a/jquery-opdrachten-3/index3.3.html
+++ b/jquery-opdrachten-3/index3.3.html
@@ -16,14 +16,30 @@
 	Wanneer het antwoord is gevonden, krijgen we het aantal tests dat we hebben nodig gehad te zien 
 	via een alert. */
 
-		$(document).ready(function(){
-		$("#form").html(`<input type="text" value=" ">`); 
-		$("input").after("<button >+</button>");
+$(document).ready(function(){
+		$("body").html(`<input type="text" value=" ">`); 
+		$("input").before("<p>Please enter  a number between 0 and 100.</p>");
+		$("input").after("<button >Check your number</button>");
 		
+	$(function(){
+		let num = $("input:text").val();
+		let i=1;
+	$("button").click(function(){
+	   while(num!==78){  
+		if(num<78){
+			alert("meer");
+		} else if(num>78){
+			alert("minder");
+		} else {
+			alert("Juist. Je hebt "+ i++ +"keer geraden.")
+		}
+	  } 
+	});
 
-		let num = $("input").value;
+	});	
+
 		
-		$(function(){
+	/* 	$(function(){
 			let i=1;
 			$("button").eq(0).click(function(){
                $("input").attr("value",i++);
@@ -31,20 +47,16 @@
 			$("button").eq(1).click(function(){
                $("input").attr("value",i--);
 			});
-		});
+		}); */
 	
-  
-
 });	
 			
 		</script>
 		<title>jQuery : Opdrachten-3.3</title>
 	</head>
 	<body>
-    <div id="form">
-
-	</div>
-	
+   
+		
 
     </body>
 </html>
